myCompiler/programParser.py
# Generated from program.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class programParser ( Parser ):

    grammarFileName = "program.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<='", "'>='", "'=='", "'!='", "'&&'", 
                     "'||'", "','", "';'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "'<'", "'>'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'!'", "'%'", "'int'", "'void'", "'if'", "'else'", 
                     "'while'", "'break'", "'continue'", "'return'", "'const'" ]

    symbolicNames = [ "<INVALID>", "LoE", "GoE", "Equal", "NEqual", "And", 
                      "Or", "COMMA", "SEMI", "Lb", "Rb", "Lsb", "Rsb", "Lcb", 
                      "Rcb", "Lab", "Rab", "ASSIGN", "PLUS", "MINUS", "MULTI", 
                      "DIV", "NOT", "PERCENT", "INT", "VOID", "IF", "ELSE", 
                      "WHILE", "BREAK", "CONTINUE", "RETURN", "CONST", "Ident", 
                      "Number", "Decimal_const", "Octal_const", "Hexadecimal_const", 
                      "Hexadecimal_prefix", "Nonzero_digit", "Octal_digit", 
                      "Hexadecimal_digit", "Digit", "Ignore_single", "Ignore_multi", 
                      "Blank" ]

    RULE_compunit = 0
    RULE_decl = 1
    RULE_constdecl = 2
    RULE_bType = 3
    RULE_constdef = 4
    RULE_constinitval = 5
    RULE_vardecl = 6
    RULE_vardef = 7
    RULE_initval = 8
    RULE_funcdef = 9
    RULE_funcType = 10
    RULE_funcfparams = 11
    RULE_funcfparam = 12
    RULE_block = 13
    RULE_blockitem = 14
    RULE_stmt = 15
    RULE_assignstmt = 16
    RULE_normalstmt = 17
    RULE_blockstmt = 18
    RULE_ifstmt = 19
    RULE_whilestmt = 20
    RULE_breakstmt = 21
    RULE_continuestmt = 22
    RULE_returnstmt = 23
    RULE_exp = 24
    RULE_cond = 25
    RULE_lval = 26
    RULE_primaryexp = 27
    RULE_unaryexp = 28
    RULE_unaryOp = 29
    RULE_funcrparams = 30
    RULE_mulexp = 31
    RULE_addexp = 32
    RULE_relexp = 33
    RULE_eqexp = 34
    RULE_landexp = 35
    RULE_lOrexp = 36
    RULE_constexp = 37
    RULE_number = 38
    RULE_ident = 39

    ruleNames =  [ "compunit", "decl", "constdecl", "bType", "constdef", 
                   "constinitval", "vardecl", "vardef", "initval", "funcdef", 
                   "funcType", "funcfparams", "funcfparam", "block", "blockitem", 
                   "stmt", "assignstmt", "normalstmt", "blockstmt", "ifstmt", 
                   "whilestmt", "breakstmt", "continuestmt", "returnstmt", 
                   "exp", "cond", "lval", "primaryexp", "unaryexp", "unaryOp", 
                   "funcrparams", "mulexp", "addexp", "relexp", "eqexp", 
                   "landexp", "lOrexp", "constexp", "number", "ident" ]

    EOF = Token.EOF
    LoE=1
    GoE=2
    Equal=3
    NEqual=4
    And=5
    Or=6
    COMMA=7
    SEMI=8
    Lb=9
    Rb=10
    Lsb=11
    Rsb=12
    Lcb=13
    Rcb=14
    Lab=15
    Rab=16
    ASSIGN=17
    PLUS=18
    MINUS=19
    MULTI=20
    DIV=21
    NOT=22
    PERCENT=23
    INT=24
    VOID=25
    IF=26
    ELSE=27
    WHILE=28
    BREAK=29
    CONTINUE=30
    RETURN=31
    CONST=32
    Ident=33
    Number=34
    Decimal_const=35
    Octal_const=36
    Hexadecimal_const=37
    Hexadecimal_prefix=38
    Nonzero_digit=39
    Octal_digit=40
    Hexadecimal_digit=41
    Digit=42
    Ignore_single=43
    Ignore_multi=44
    Blank=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompunitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(programParser.DeclContext,0)


        def EOF(self):
            return self.getToken(programParser.EOF, 0)

        def funcdef(self):
            return self.getTypedRuleContext(programParser.FuncdefContext,0)


        def compunit(self):
            return self.getTypedRuleContext(programParser.CompunitContext,0)


        def getRuleIndex(self):
            return programParser.RULE_compunit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompunit" ):
                listener.enterCompunit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompunit" ):
                listener.exitCompunit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompunit" ):
                return visitor.visitCompunit(self)
            else:
                return visitor.visitChildren(self)



    def compunit(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = programParser.CompunitContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_compunit, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 81
                self.decl()
                self.state = 82
                self.match(programParser.EOF)
                pass

            elif la_ == 2:
                self.state = 84
                self.funcdef()
                self.state = 85
                self.match(programParser.EOF)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 97
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = programParser.CompunitContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_compunit)
                        self.state = 89
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 90
                        self.decl()
                        self.state = 91
                        self.match(programParser.EOF)
                        pass

                    elif la_ == 2:
                        localctx = programParser.CompunitContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_compunit)
                        self.state = 93
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 94
                        self.funcdef()
                        self.state = 95
                        self.match(programParser.EOF)
                        pass

             
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constdecl(self):
            return self.getTypedRuleContext(programParser.ConstdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(programParser.VardeclContext,0)


        def getRuleIndex(self):
            return programParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = programParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [programParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.constdecl()
                pass
            elif token in [programParser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.vardecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(programParser.CONST, 0)

        def bType(self):
            return self.getTypedRuleContext(programParser.BTypeContext,0)


        def constdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(programParser.ConstdefContext)
            else:
                return self.getTypedRuleContext(programParser.ConstdefContext,i)


        def SEMI(self):
            return self.getToken(programParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.COMMA)
            else:
                return self.getToken(programParser.COMMA, i)

        def getRuleIndex(self):
            return programParser.RULE_constdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstdecl" ):
                listener.enterConstdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstdecl" ):
                listener.exitConstdecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstdecl" ):
                return visitor.visitConstdecl(self)
            else:
                return visitor.visitChildren(self)




    def constdecl(self):

        localctx = programParser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(programParser.CONST)
            self.state = 107
            self.bType()
            self.state = 108
            self.constdef()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==programParser.COMMA:
                self.state = 109
                self.match(programParser.COMMA)
                self.state = 110
                self.constdef()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(programParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(programParser.INT, 0)

        def getRuleIndex(self):
            return programParser.RULE_bType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBType" ):
                listener.enterBType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBType" ):
                listener.exitBType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBType" ):
                return visitor.visitBType(self)
            else:
                return visitor.visitChildren(self)




    def bType(self):

        localctx = programParser.BTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(programParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(programParser.IdentContext,0)


        def ASSIGN(self):
            return self.getToken(programParser.ASSIGN, 0)

        def constinitval(self):
            return self.getTypedRuleContext(programParser.ConstinitvalContext,0)


        def Lsb(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.Lsb)
            else:
                return self.getToken(programParser.Lsb, i)

        def constexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(programParser.ConstexpContext)
            else:
                return self.getTypedRuleContext(programParser.ConstexpContext,i)


        def Rsb(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.Rsb)
            else:
                return self.getToken(programParser.Rsb, i)

        def getRuleIndex(self):
            return programParser.RULE_constdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstdef" ):
                listener.enterConstdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstdef" ):
                listener.exitConstdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstdef" ):
                return visitor.visitConstdef(self)
            else:
                return visitor.visitChildren(self)




    def constdef(self):

        localctx = programParser.ConstdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.ident()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==programParser.Lsb:
                self.state = 121
                self.match(programParser.Lsb)
                self.state = 122
                self.constexp()
                self.state = 123
                self.match(programParser.Rsb)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(programParser.ASSIGN)
            self.state = 131
            self.constinitval()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstinitvalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constexp(self):
            return self.getTypedRuleContext(programParser.ConstexpContext,0)


        def Lcb(self):
            return self.getToken(programParser.Lcb, 0)

        def Rcb(self):
            return self.getToken(programParser.Rcb, 0)

        def constinitval(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(programParser.ConstinitvalContext)
            else:
                return self.getTypedRuleContext(programParser.ConstinitvalContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.COMMA)
            else:
                return self.getToken(programParser.COMMA, i)

        def getRuleIndex(self):
            return programParser.RULE_constinitval

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstinitval" ):
                listener.enterConstinitval(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstinitval" ):
                listener.exitConstinitval(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstinitval" ):
                return visitor.visitConstinitval(self)
            else:
                return visitor.visitChildren(self)




    def constinitval(self):

        localctx = programParser.ConstinitvalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constinitval)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [programParser.Lb, programParser.PLUS, programParser.MINUS, programParser.NOT, programParser.Ident, programParser.Number]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.constexp()
                pass
            elif token in [programParser.Lcb]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(programParser.Lcb)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << programParser.Lb) | (1 << programParser.Lcb) | (1 << programParser.PLUS) | (1 << programParser.MINUS) | (1 << programParser.NOT) | (1 << programParser.Ident) | (1 << programParser.Number))) != 0):
                    self.state = 135
                    self.constinitval()
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==programParser.COMMA:
                        self.state = 136
                        self.match(programParser.COMMA)
                        self.state = 137
                        self.constinitval()
                        self.state = 142
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 145
                self.match(programParser.Rcb)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bType(self):
            return self.getTypedRuleContext(programParser.BTypeContext,0)


        def vardef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(programParser.VardefContext)
            else:
                return self.getTypedRuleContext(programParser.VardefContext,i)


        def SEMI(self):
            return self.getToken(programParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.COMMA)
            else:
                return self.getToken(programParser.COMMA, i)

        def getRuleIndex(self):
            return programParser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = programParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.bType()
            self.state = 149
            self.vardef()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==programParser.COMMA:
                self.state = 150
                self.match(programParser.COMMA)
                self.state = 151
                self.vardef()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(programParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return programParser.RULE_vardef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssigndefContext(VardefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a programParser.VardefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(programParser.IdentContext,0)

        def ASSIGN(self):
            return self.getToken(programParser.ASSIGN, 0)
        def initval(self):
            return self.getTypedRuleContext(programParser.InitvalContext,0)

        def Lsb(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.Lsb)
            else:
                return self.getToken(programParser.Lsb, i)
        def constexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(programParser.ConstexpContext)
            else:
                return self.getTypedRuleContext(programParser.ConstexpContext,i)

        def Rsb(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.Rsb)
            else:
                return self.getToken(programParser.Rsb, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssigndef" ):
                listener.enterAssigndef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssigndef" ):
                listener.exitAssigndef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssigndef" ):
                return visitor.visitAssigndef(self)
            else:
                return visitor.visitChildren(self)


    class NoassigndefContext(VardefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a programParser.VardefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(programParser.IdentContext,0)

        def Lsb(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.Lsb)
            else:
                return self.getToken(programParser.Lsb, i)
        def constexp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(programParser.ConstexpContext)
            else:
                return self.getTypedRuleContext(programParser.ConstexpContext,i)

        def Rsb(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.Rsb)
            else:
                return self.getToken(programParser.Rsb, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNoassigndef" ):
                listener.enterNoassigndef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNoassigndef" ):
                listener.exitNoassigndef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNoassigndef" ):
                return visitor.visitNoassigndef(self)
            else:
                return visitor.visitChildren(self)



    def vardef(self):

        localctx = programParser.VardefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardef)
        self._la = 0 # Token type
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = programParser.NoassigndefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.ident()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==programParser.Lsb:
                    self.state = 160
                    self.match(programParser.Lsb)
                    self.state = 161
                    self.constexp()
                    self.state = 162
                    self.match(programParser.Rsb)
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                localctx = programParser.AssigndefContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.ident()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==programParser.Lsb:
                    self.state = 170
                    self.match(programParser.Lsb)
                    self.state = 171
                    self.constexp()
                    self.state = 172
                    self.match(programParser.Rsb)
                    self.state = 178
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 179
                self.match(programParser.ASSIGN)
                self.state = 180
                self.initval()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitvalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(programParser.ExpContext,0)


        def Lcb(self):
            return self.getToken(programParser.Lcb, 0)

        def Rcb(self):
            return self.getToken(programParser.Rcb, 0)

        def initval(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(programParser.InitvalContext)
            else:
                return self.getTypedRuleContext(programParser.InitvalContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(programParser.COMMA)
            else:
                return self.getToken(programParser.COMMA, i)

        def getRuleIndex(self):
            return programParser.RULE_initval

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitval" ):
                listener.enterInitval(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitval" ):
                listener.exitInitval(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitval" ):
                return visitor.visitInitval(self)
            else:
                return visitor.visitChildren(self)




    def initval(self):

        localctx = programParser.InitvalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initval)
        self._la = 0 # Token type
        try:
            self.state = 197
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [programParser.Lb, programParser.PLUS, programParser.MINUS, programParser.NOT, programParser.Ident, programParser.Number]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.exp()
                pass
            elif token in [programParser.Lcb]:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.match(programParser.Lcb)
                self.state = 194
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << programParser.Lb) | (1 << programParser.Lcb) | (1 << programParser.PLUS) | (1 << programParser.MINUS) | (1 << programParser.NOT) | (1 << programParser.Ident) | (1 << programParser.Number))) != 0):
                    self.state = 186
                    self.initval()
                    self.state = 191
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==programParser.COMMA:
                        self.state = 187
                        self.match(programParser.COMMA)
                        self.state = 188
                        self.initval()
                        self.state = 193
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 196
                self.match(programParser.Rcb)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(programParser.FuncTypeContext,0)


        def ident(self):
            return self.getTypedRuleContext(programParser.IdentContext,0)


        def Lb(self):
            return self.getToken(programParser.Lb, 0)

        def Rb(self):
            return self.getToken(programParser.Rb, 0)

        def block(self):
            return self.getTypedRuleContext(programParser.BlockContext,0)


        def funcfparams(self):
            return self.getTypedRuleContext(programParser.FuncfparamsContext,0)


        def getRuleIndex(self):
            return programParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdef" ):
                return visitor.visitFuncdef(self)
            else:
                return visitor.visitChildren(self)




    def funcdef(self):

        localctx = programParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.funcType()
            self.state = 200
            self.ident()
            self.state = 201
            self.match(programParser.Lb)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==programParser.INT:
                self.state = 202
                self.funcfparams()

